Fri Nov 21 03:23:57 GMT 2003  Olly Betts <olly@survex.com>

	* Makefile.am,include/xapian/termiterator.h,api/omtermlistiterator.cc:
	  TermIterator::TermIterator() fix which actually works!

Fri Nov 21 01:14:23 GMT 2003  Olly Betts <olly@survex.com>

	* HACKING,configure.in,docs/Makefile.am,extra/Makefile.am: Change to
	  using AM_MAINTAINER_MODE.  If you're doing development work on
	  Xapian, you should configure with "--enable-maintainer-mode" and
	  ideally use GNU make.

Fri Nov 21 01:13:25 GMT 2003  Olly Betts <olly@survex.com>

	* include/xapian/termiterator.h,tests/api_nodb.cc: Added TermIterator
	  default ctor which had disappeared somehow.  Added regression test.

Thu Nov 20 03:19:37 GMT 2003  Olly Betts <olly@survex.com>

	* configure.in: Fixed test for fdatasync to work (I suspect a change
	  in a recent autoconf broke it as it relied on autoconf internal
	  naming).

Tue Nov 18 17:53:29 GMT 2003  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Tweaked workaround for FreeBSD make in VPATH
	  builds.

Tue Nov 18 17:53:01 GMT 2003  Olly Betts <olly@survex.com>

	* extra/queryparsertest.cc: Added another testcase.

Tue Nov 18 17:37:20 GMT 2003  Olly Betts <olly@survex.com>

	* docs/: Added first cut of documentation for Xapian::QueryParser
	  query syntax.
	* docs/scalability.html: Fixed typo.

Fri Oct 31 18:17:13 GMT 2003  Olly Betts <olly@survex.com>

	* extra/queryparser.yy,extra/queryparsertest.cc: Added support for
	  term prefixes on phrases and expressions (e.g. author:(twain OR poe)
	  subject:"space flight").

Tue Oct 28 15:03:01 GMT 2003  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Added FIXME comment.

Tue Oct 28 15:01:14 GMT 2003  Olly Betts <olly@survex.com>

	* docs/todo.xml: Removed Java from list of language bindings we'd
	  like to support, as we should have up-to-date Java bindings soon.

Sun Oct 26 20:18:24 GMT 2003  Olly Betts <olly@survex.com>

	* bin/quartzcompact.cc: Fix the name that the meta file gets copied