@@ -1,3 +1,9 @@
+Tue Nov 25 02:47:16 GMT 2003  Olly Betts <olly@survex.com>
+
+	* common/,include/xapian/: Fixed incorrect doxygen comments which
+	  resulted in some missing text in the collated API and internal
+	  classes documentation.
+
 Fri Nov 21 03:23:57 GMT 2003  Olly Betts <olly@survex.com>
 
 	* Makefile.am,include/xapian/termiterator.h,api/omtermlistiterator.cc:
